--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ CATEGORY_URL='https://houlala.herokuapp.com/api/categories'
 PRODUCT_URL='https://houlala.herokuapp.com/api/products'
 PAGE_URL='https://houlala.herokuapp.com/api/pages'
 JOB_URL='https://houlala.herokuapp.com/api/jobs'
+POST_URL='https://houlala.herokuapp.com/api/posts'
