--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  font_awesome_flutter: ^9.2.0
+  font_awesome_flutter: ^10.1.0
   line_icons: ^2.0.1
   http: ^0.13.4
   provider: ^6.0.2
   flutter_dotenv: ^5.0.2
   flutter_markdown: ^0.6.9
   url_launcher: ^6.0.20
+  sizer: ^2.0.15
+  intl: ^0.17.0
+  dev: ^1.0.0
+  hive: ^2.1.0
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
