--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   mongo_dart: ^0.7.4+1
   badges: ^2.0.2
   auto_size_text: ^3.0.0
+  modal_bottom_sheet: ^2.0.1
+  objectbox: ^1.4.1
 
 dev_dependencies:
   flutter_test:
