ajouter le widget pour afficher quand on est pas connecte

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,7 @@ flutter:
          - asset: fonts/Poppins-Bold.ttf
 
   assets:
+    - images/wifi-x.png
     - images/comment.png
     - images/no-notification.png
     - images/cart.png
