--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,20 +51,21 @@ dependencies:
   badges: ^2.0.2
   auto_size_text: ^3.0.0
   modal_bottom_sheet: ^2.0.1
-  hive_generator: ^1.1.2
   path_provider: ^2.0.9
   connectivity_plus: ^2.3.0
+  responsive_builder: ^0.4.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  build_runner: ^2.1.10
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  hive_generator: ^1.1.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
