--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ PRODUCT_URL='https://houlala.herokuapp.com/api/products'
 PAGE_URL='https://houlala.herokuapp.com/api/pages'
 JOB_URL='https://houlala.herokuapp.com/api/jobs'
 POST_URL='https://houlala.herokuapp.com/api/posts'
+CART_URL='https://houlala.herokuapp.com/api/cart-items'
+ORDER_URL='https://houlala.herokuapp.com/api/orders'
