--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+/android/app/build.gradle
 
 key.properties
 app/upload-keystore.jks
