changer les urls

--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-CATEGORY_URL='https://houlala.herokuapp.com/api/categories'
-PRODUCT_URL='https://houlala.herokuapp.com/api/products'
-PAGE_URL='https://houlala.herokuapp.com/api/pages'
-JOB_URL='https://houlala.herokuapp.com/api/jobs'
-POST_URL='https://houlala.herokuapp.com/api/posts'
-CART_URL='https://houlala.herokuapp.com/api/cart-items'
-ORDER_URL='https://houlala.herokuapp.com/api/orders'
+CATEGORY_URL='http://10.0.2.2:8080/marketplace/categories'
+PRODUCT_URL='http://10.0.2.2:8080/marketplace/products'
+POST_URL='http://10.0.2.2:8080/marketplace/posts'
+ORDER_URL='http://10.0.2.2:8080/marketplace/orders'
+LOCATION_URL='http://10.0.2.2:8080/discovery-orchestrator/locations'
+DISCOVERY_CATEGORY_URL='http://10.0.2.2:8080/discovery-orchestrator/categories'
+SUBCATEGORY_URL='http://10.0.2.2:8080/marketplace/sub-categories'
+AUTH_URL='http://10.0.2.2:8080/authentication'
+COMMENT_URL='http://10.0.2.2:8080/marketplace/comments'
