--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,27 +35,27 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
   font_awesome_flutter: ^10.1.0
   line_icons: ^2.0.1
   http: ^0.13.4
-  provider: ^6.0.2
+  provider: ^6.0.3
   flutter_dotenv: ^5.0.2
-  flutter_markdown: ^0.6.9
+  flutter_markdown: ^0.6.10+3
   sizer: ^2.0.15
   intl: ^0.17.0
   dev: ^1.0.0
-  hive: ^2.1.0
+  hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_secure_storage: ^5.0.2
   mongo_dart: ^0.7.4+1
-  badges: ^2.0.2
+  badges: ^2.0.3
   auto_size_text: ^3.0.0
-  modal_bottom_sheet: ^2.0.1
-  path_provider: ^2.0.9
-  connectivity_plus: ^2.3.0
+  modal_bottom_sheet: ^2.1.0
+  path_provider: ^2.0.11
+  connectivity_plus: ^2.3.6
   responsive_builder: ^0.4.2
-  url_launcher: ^6.1.0
+  url_launcher: ^6.1.5
   flutter_launch: ^0.3.0
   launch_review: ^3.0.1
 
