ajouter le feignclient pour envoyer les Emails pour la commande

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ DISCOVERY_CATEGORY_URL='http://10.0.2.2:8080/discovery-orchestrator/categories'
 SUBCATEGORY_URL='http://10.0.2.2:8080/marketplace/sub-categories'
 AUTH_URL='http://10.0.2.2:8080/authentication'
 COMMENT_URL='http://10.0.2.2:8080/marketplace/comments'
+EMAIL_URL='http://10.0.2.2:8080/notification/emails'
