--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-CATEGORY_URL='http://10.0.2.2:8080/marketplace/categories'
-PRODUCT_URL='http://10.0.2.2:8080/marketplace/products'
-POST_URL='http://10.0.2.2:8080/marketplace/posts'
-ORDER_URL='http://10.0.2.2:8080/marketplace/orders'
-LOCATION_URL='http://10.0.2.2:8080/discovery-orchestrator/locations'
-DISCOVERY_CATEGORY_URL='http://10.0.2.2:8080/discovery-orchestrator/categories'
-SUBCATEGORY_URL='http://10.0.2.2:8080/marketplace/sub-categories'
-AUTH_URL='http://10.0.2.2:8080/authentication'
-COMMENT_URL='http://10.0.2.2:8080/marketplace/comments'
-EMAIL_URL='http://10.0.2.2:8080/notification/emails'
+CATEGORY_URL='https://api.houlala.store/marketplace/categories'
+PRODUCT_URL='https://api.houlala.store/marketplace/products'
+POST_URL='https://api.houlala.store/marketplace/posts'
+ORDER_URL='https://api.houlala.store/marketplace/orders'
+LOCATION_URL='https://api.houlala.store/discovery-orchestrator/locations'
+DISCOVERY_CATEGORY_URL='https://api.houlala.store/discovery-orchestrator/categories'
+SUBCATEGORY_URL='https://api.houlala.store/marketplace/sub-categories'
+AUTH_URL='https://api.houlala.store/authentication'
+COMMENT_URL='https://api.houlala.store/marketplace/comments'
+EMAIL_URL='https://api.houlala.store/notification/emails'
