ajouter les icones

--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ DISCOVERY_CATEGORY_URL='https://api.houlala.store/discovery-orchestrator/categor
 SUBCATEGORY_URL='https://api.houlala.store/marketplace/sub-categories'
 AUTH_URL='https://api.houlala.store/authentication'
 COMMENT_URL='https://api.houlala.store/marketplace/comments'
-EMAIL_URL='https://api.houlala.store/notification/emails'
+EMAIL_URL='https://api.houlala.store/email'
