--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   http: ^0.13.4
   provider: ^6.0.3
   flutter_dotenv: ^5.0.2
-  flutter_markdown: ^0.6.10+3
+  flutter_markdown: ^0.6.13
   sizer: ^2.0.15
   intl: ^0.17.0
   dev: ^1.0.0
