--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,7 @@ flutter:
     - texts/term.html
     - texts/conditions.html
     - images/notification.png
+    - images/shopping.png
     - .env
 
 
