--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ version: 1.0.1
 environment:
   sdk: ">=2.16.1 <3.0.0"
 dependencies:
+  houlala_ui:
   auto_size_text: ^3.0.0
   connectivity_plus: ^3.0.3
   flutter:
@@ -27,6 +28,7 @@ dependencies:
   sizer: ^2.0.15
   url_launcher: ^6.1.10
   webview_flutter_plus: ^0.3.0+2
+  flutter_riverpod: ^2.3.6
 
 
   # The following adds the Cupertino Icons font to your application.
