--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,7 +34,8 @@ if (keystorePropertiesFile.exists()) {
 
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion 34
+    namespace "com.shophoulala"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -56,10 +57,9 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-
         applicationId "com.shophoulala"
         minSdkVersion 20
-        targetSdkVersion flutter.targetSdkVersion
+        targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
