--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,31 +4,26 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.1
 
-
 environment:
   sdk: ">=2.16.1 <3.0.0"
 dependencies:
-  houlala_ui:
   auto_size_text: ^3.0.0
-  connectivity_plus: ^3.0.3
+  connectivity_plus: ^4.0.2
   flutter:
     sdk: flutter
-  flutter_dotenv: ^5.0.2
-  flutter_markdown: ^0.6.14
-  flutter_secure_storage: ^8.0.0
-  font_awesome_flutter: ^10.4.0
+  flutter_dotenv: ^5.1.0
+  flutter_markdown: ^0.6.17+2
+  flutter_secure_storage: ^9.0.0
+  font_awesome_flutter: ^10.5.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  http: ^0.13.5
-  intl: ^0.18.0
-  launch_review: ^3.0.1
-  path_provider: ^2.0.14
+  http: ^1.1.0
+  intl: ^0.18.1
+  path_provider: ^2.1.1
   provider: ^6.0.5
-  responsive_builder: ^0.6.4
   sizer: ^2.0.15
-  url_launcher: ^6.1.10
-  webview_flutter_plus: ^0.3.0+2
-  flutter_riverpod: ^2.3.6
+  url_launcher: ^6.1.14
+  flutter_riverpod: ^2.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -52,8 +47,6 @@ flutter_icons:
   adaptive_icon_foreground: "images/houlala_foreground.png"
 
 flutter:
-
-
   uses-material-design: true
   fonts:
      - family: Poppins
@@ -104,6 +97,11 @@ flutter:
     - images/notification.png
     - images/shopping.png
     - images/store.png
+    - images/house_fill.png
+    - images/categorie_fill.png
+    - images/cart_fill.png
+    - images/bell_fill.png
+    - images/user_fill.png
     - .env
 
 
