--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,57 +5,50 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.1
 
 environment:
-  sdk: ">=2.16.1 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 dependencies:
   auto_size_text: ^3.0.0
   connectivity_plus: ^4.0.2
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
-  flutter_markdown: ^0.6.17+2
+  flutter_markdown: ^0.6.20
   flutter_secure_storage: ^9.0.0
-  font_awesome_flutter: ^10.5.0
+  font_awesome_flutter: ^10.7.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  http: ^1.1.0
-  intl: ^0.18.1
-  path_provider: ^2.1.1
-  provider: ^6.0.5
+  http: ^1.2.1
+  intl: ^0.19.0
+  path_provider: ^2.1.2
+  provider: ^6.1.1
   sizer: ^2.0.15
-  url_launcher: ^6.1.14
-  flutter_riverpod: ^2.4.0
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-
-
+  url_launcher: ^6.2.4
+  riverpod: ^2.4.9
+  flutter_riverpod: ^2.4.9
+  riverpod_annotation: ^2.3.3
+  heroicons: ^0.9.0
+  google_fonts: ^6.1.0
+  freezed: ^2.4.7
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
+  collection: ^1.18.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.3.3
-  flutter_lints: ^1.0.0
-  hive_generator: ^1.1.2
-  flutter_launcher_icons: ^0.9.3
-
-
+  riverpod_generator: ^2.3.9
+  build_runner: ^2.4.8
+  flutter_lints: ^2.0.0
+  hive_generator: ^2.0.1
+  flutter_launcher_icons: ^0.13.1
+  json_serializable: ^6.7.1
 flutter_icons:
   android: true
   ios: true
   image_path: "images/houlala.png"
   adaptive_icon_background: "#e19a30"
   adaptive_icon_foreground: "images/houlala_foreground.png"
-
 flutter:
   uses-material-design: true
-  fonts:
-     - family: Poppins
-       fonts:
-         - asset: fonts/Poppins-Regular.ttf
-     - family: PoppinsBold
-       fonts:
-         - asset: fonts/Poppins-Bold.ttf
-
   assets:
     - images/houlala.png
     - texts/security.md
