converted to super.key constructor.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,11 @@ environment:
   sdk: ">=2.17.0 <3.0.0"
 dependencies:
   auto_size_text: ^3.0.0
-  connectivity_plus: ^4.0.2
+  connectivity_plus: ^6.0.3
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
-  flutter_markdown: ^0.6.20
+  flutter_markdown: ^0.7.1
   flutter_secure_storage: ^9.0.0
   font_awesome_flutter: ^10.7.0
   hive: ^2.2.3
@@ -26,18 +26,22 @@ dependencies:
   riverpod: ^2.4.9
   flutter_riverpod: ^2.4.9
   riverpod_annotation: ^2.3.3
-  heroicons: ^0.9.0
+  heroicons: ^0.10.0
   google_fonts: ^6.1.0
   freezed: ^2.4.7
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   collection: ^1.18.0
+  webview_flutter: ^4.7.0
+  webview_flutter_wkwebview: ^3.13.0
+  toastification: ^2.0.0
+  pocketbase: ^0.18.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
   riverpod_generator: ^2.3.9
   build_runner: ^2.4.8
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
   hive_generator: ^2.0.1
   flutter_launcher_icons: ^0.13.1
   json_serializable: ^6.7.1
